# hexpuzzle

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  build_web.sh  config.h.in  configure  configure.ac
levels/classics/: 1-red.hexlevelpack  2-blue.hexlevelpack  3-green.hexlevelpack  4-yellow.hexlevelpack
levels/classics/1-red/: 01.hexlevel  02.hexlevel  03.hexlevel  04.hexlevel  05.hexlevel  06.hexlevel  07.hexlevel  08.hexlevel  09.hexlevel  10.hexlevel  levels.index
levels/classics/2-blue/: 11.hexlevel  12.hexlevel  13.hexlevel  14.hexlevel  15.hexlevel  16.hexlevel  17.hexlevel  18.hexlevel  19.hexlevel  20.hexlevel  levels.index
levels/classics/3-green/: 21.hexlevel  22.hexlevel  23.hexlevel  24.hexlevel  25.hexlevel  26.hexlevel  27.hexlevel  28.hexlevel  29.hexlevel  30.hexlevel  levels.index
levels/classics/4-yellow/: 31.hexlevel  32.hexlevel  33.hexlevel  34.hexlevel  35.hexlevel  36.hexlevel  37.hexlevel  38.hexlevel  39.hexlevel  40.hexlevel  levels.index
lib/gnulib/: Makefile.gnulib  time.h
m4/: ax_check_stdc.m4
m4/gnulib/: gnulib-cache.m4  gnulib-comp.m4
misc/: README.css
shaders/: background.frag.glsl  background.vert.glsl  postprocessing.frag.glsl  win_border.frag.glsl  win_border.frag.h
src/: anim_fsm.c  anim_fsm.h  ansi_colors.h  background.c  background.h  blueprint_string.c  blueprint_string.h  classics.c  classics.h  classics_levels.h  collection.c  collection.h  color.c  color.h  common.h  const.h  data_classics_levels.h  data_fonts.h  data_shaders.h  data_textures.h  fonts.c  fonts.h  fsdir.c  fsdir.h  game_mode.c  game_mode.h  generate_level.c  generate_level.h  grid.c  grid.h  gui_browser.c  gui_browser.h  gui_collection.c  gui_collection.h  gui_dialog.c  gui_dialog.h  gui_help.c  gui_help.h  gui_options.c  gui_options.h  (+64 more)
util/: compile_to_c_src.c
